--- a/02-host/src/index.css
+++ b/02-host/src/index.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: "Roboto", Helvetica, sans-serif;
 }
 
 .container {
-  font-size: 3rem;
-  margin: auto;
-  max-width: 800px;
-  margin-top: 20px;
+	font-size: 3rem;
+	margin: auto;
+	max-width: 800px;
+	margin-top: 20px;
 }
